--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -17,9 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\56830\\AppData\\Local\\Temp/ipykernel_4308/420120586.py:9: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
+      "  data = pd.concat([realDF, ss1DF, ss2DF, ss3DF, ffDF, ts1DF]).fillna(0).drop('Unnamed: 0', 1)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -41,7 +49,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>status</th>\n",
        "      <th>follower</th>\n",
        "      <th>friend</th>\n",
@@ -51,6 +58,7 @@
        "      <th>follower_minus_friend</th>\n",
        "      <th>favorite_over_friend</th>\n",
        "      <th>status_over_friend</th>\n",
+       "      <th>url</th>\n",
        "      <th>...</th>\n",
        "      <th>url_std</th>\n",
        "      <th>hashtag_mean</th>\n",
@@ -67,7 +75,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>2177.0</td>\n",
        "      <td>208.0</td>\n",
        "      <td>332.0</td>\n",
@@ -77,6 +84,7 @@
        "      <td>-124.0</td>\n",
        "      <td>0.798193</td>\n",
        "      <td>6.557229</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -91,7 +99,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>2660.0</td>\n",
        "      <td>330.0</td>\n",
        "      <td>485.0</td>\n",
@@ -101,6 +108,7 @@
        "      <td>-155.0</td>\n",
        "      <td>8.189691</td>\n",
        "      <td>5.484536</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -115,7 +123,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>1254.0</td>\n",
        "      <td>166.0</td>\n",
        "      <td>177.0</td>\n",
@@ -125,6 +132,7 @@
        "      <td>-11.0</td>\n",
        "      <td>6.694915</td>\n",
        "      <td>7.084746</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -139,7 +147,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>202968.0</td>\n",
        "      <td>2248.0</td>\n",
        "      <td>981.0</td>\n",
@@ -149,6 +156,7 @@
        "      <td>1267.0</td>\n",
        "      <td>61.471967</td>\n",
        "      <td>206.899083</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.301894</td>\n",
        "      <td>0.147516</td>\n",
@@ -163,7 +171,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>82.0</td>\n",
        "      <td>21.0</td>\n",
        "      <td>79.0</td>\n",
@@ -173,6 +180,7 @@
        "      <td>-58.0</td>\n",
        "      <td>0.063291</td>\n",
        "      <td>1.037975</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -187,49 +195,49 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 51 columns</p>\n",
+       "<p>5 rows × 50 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0    status  follower  friend  favorite  listed  \\\n",
-       "0           0    2177.0     208.0   332.0     265.0     1.0   \n",
-       "1           1    2660.0     330.0   485.0    3972.0     5.0   \n",
-       "2           2    1254.0     166.0   177.0    1185.0     0.0   \n",
-       "3           3  202968.0    2248.0   981.0   60304.0   101.0   \n",
-       "4           4      82.0      21.0    79.0       5.0     0.0   \n",
+       "     status  follower  friend  favorite  listed  follower_over_friend  \\\n",
+       "0    2177.0     208.0   332.0     265.0     1.0              0.626506   \n",
+       "1    2660.0     330.0   485.0    3972.0     5.0              0.680412   \n",
+       "2    1254.0     166.0   177.0    1185.0     0.0              0.937853   \n",
+       "3  202968.0    2248.0   981.0   60304.0   101.0              2.291539   \n",
+       "4      82.0      21.0    79.0       5.0     0.0              0.265823   \n",
        "\n",
-       "   follower_over_friend  follower_minus_friend  favorite_over_friend  \\\n",
-       "0              0.626506                 -124.0              0.798193   \n",
-       "1              0.680412                 -155.0              8.189691   \n",
-       "2              0.937853                  -11.0              6.694915   \n",
-       "3              2.291539                 1267.0             61.471967   \n",
-       "4              0.265823                  -58.0              0.063291   \n",
+       "   follower_minus_friend  favorite_over_friend  status_over_friend  url  ...  \\\n",
+       "0                 -124.0              0.798193            6.557229  0.0  ...   \n",
+       "1                 -155.0              8.189691            5.484536  0.0  ...   \n",
+       "2                  -11.0              6.694915            7.084746  0.0  ...   \n",
+       "3                 1267.0             61.471967          206.899083  1.0  ...   \n",
+       "4                  -58.0              0.063291            1.037975  0.0  ...   \n",
        "\n",
-       "   status_over_friend  ...   url_std  hashtag_mean  hashtag_std  mention_mean  \\\n",
-       "0            6.557229  ...  0.000000      0.000000      0.00000      0.000000   \n",
-       "1            5.484536  ...  0.000000      0.000000      0.00000      0.000000   \n",
-       "2            7.084746  ...  0.000000      0.000000      0.00000      0.000000   \n",
-       "3          206.899083  ...  0.301894      0.147516      0.53313      0.825776   \n",
-       "4            1.037975  ...  0.000000      0.000000      0.00000      0.000000   \n",
+       "    url_std  hashtag_mean  hashtag_std  mention_mean  mention_std  \\\n",
+       "0  0.000000      0.000000      0.00000      0.000000     0.000000   \n",
+       "1  0.000000      0.000000      0.00000      0.000000     0.000000   \n",
+       "2  0.000000      0.000000      0.00000      0.000000     0.000000   \n",
+       "3  0.301894      0.147516      0.53313      0.825776     0.881493   \n",
+       "4  0.000000      0.000000      0.00000      0.000000     0.000000   \n",
        "\n",
-       "   mention_std  retweeted_percentage  sensitive  place  \\\n",
-       "0     0.000000               0.00000        0.0    0.0   \n",
-       "1     0.000000               0.00000        0.0    0.0   \n",
-       "2     0.000000               0.00000        0.0    0.0   \n",
-       "3     0.881493               0.33913        0.0    0.0   \n",
-       "4     0.000000               0.00000        0.0    0.0   \n",
+       "   retweeted_percentage  sensitive  place  tweet_time_interval_mean  \\\n",
+       "0               0.00000        0.0    0.0                  0.000000   \n",
+       "1               0.00000        0.0    0.0                  0.000000   \n",
+       "2               0.00000        0.0    0.0                  0.000000   \n",
+       "3               0.33913        0.0    0.0                534.917366   \n",
+       "4               0.00000        0.0    0.0                  0.000000   \n",
        "\n",
-       "   tweet_time_interval_mean  tweet_time_interval_std  \n",
-       "0                  0.000000                 0.000000  \n",
-       "1                  0.000000                 0.000000  \n",
-       "2                  0.000000                 0.000000  \n",
-       "3                534.917366              3160.052742  \n",
-       "4                  0.000000                 0.000000  \n",
+       "   tweet_time_interval_std  \n",
+       "0                 0.000000  \n",
+       "1                 0.000000  \n",
+       "2                 0.000000  \n",
+       "3              3160.052742  \n",
+       "4                 0.000000  \n",
        "\n",
-       "[5 rows x 51 columns]"
+       "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,18 +245,20 @@
    "source": [
     "import pandas as pd\n",
     "realDF = pd.read_csv('./data-processing/genuine_accounts_processed.csv')\n",
+    "ss1DF = pd.read_csv('./data-processing/social_spambots_1_processed.csv')\n",
     "ss2DF = pd.read_csv('./data-processing/social_spambots_2_processed.csv')\n",
     "ss3DF = pd.read_csv('./data-processing/social_spambots_3_processed.csv')\n",
     "ffDF = pd.read_csv('./data-processing/fake_followers_processed.csv')\n",
     "ts1DF = pd.read_csv('./data-processing/traditional_spambots_1_processed.csv')\n",
     "\n",
-    "data = pd.concat([realDF, ss2DF, ss3DF, ffDF, ts1DF]).fillna(0)\n",
-    "data.head()"
+    "data = pd.concat([realDF, ss1DF, ss2DF, ss3DF, ffDF, ts1DF]).fillna(0).drop('Unnamed: 0', 1)\n",
+    "data.head()\n",
+    "# data['Unnamed: 0']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -266,16 +276,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(11746,)"
+       "(12737,)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,14 +297,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9957434733257662\n"
+      "0.9924123495552067\n"
      ]
     }
    ],
