finished experiment 2 with college official accounts added

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\56830\\AppData\\Local\\Temp/ipykernel_4308/420120586.py:9: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
+      "/var/folders/qx/bly71f215mx_406j1_my1ghh0000gp/T/ipykernel_34288/2318159141.py:9: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
       "  data = pd.concat([realDF, ss1DF, ss2DF, ss3DF, ffDF, ts1DF]).fillna(0).drop('Unnamed: 0', 1)\n"
      ]
     },
@@ -237,19 +237,19 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "realDF = pd.read_csv('./data-processing/genuine_accounts_processed.csv')\n",
-    "ss1DF = pd.read_csv('./data-processing/social_spambots_1_processed.csv')\n",
-    "ss2DF = pd.read_csv('./data-processing/social_spambots_2_processed.csv')\n",
-    "ss3DF = pd.read_csv('./data-processing/social_spambots_3_processed.csv')\n",
-    "ffDF = pd.read_csv('./data-processing/fake_followers_processed.csv')\n",
-    "ts1DF = pd.read_csv('./data-processing/traditional_spambots_1_processed.csv')\n",
+    "realDF = pd.read_csv('./data-processing/cresci-2017/genuine_accounts_processed.csv')\n",
+    "ss1DF = pd.read_csv('./data-processing/cresci-2017/social_spambots_1_processed.csv')\n",
+    "ss2DF = pd.read_csv('./data-processing/cresci-2017/social_spambots_2_processed.csv')\n",
+    "ss3DF = pd.read_csv('./data-processing/cresci-2017/social_spambots_3_processed.csv')\n",
+    "ffDF = pd.read_csv('./data-processing/cresci-2017/fake_followers_processed.csv')\n",
+    "ts1DF = pd.read_csv('./data-processing/cresci-2017/traditional_spambots_1_processed.csv')\n",
     "\n",
     "data = pd.concat([realDF, ss1DF, ss2DF, ss3DF, ffDF, ts1DF]).fillna(0).drop('Unnamed: 0', 1)\n",
     "data.head()\n",
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "(12737,)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,14 +297,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9924123495552067\n"
+      "0.9952904238618524\n"
      ]
     }
    ],
