updated .gitignore, removed dataset to lower size

--- a/baseline-cresci/baseline-cresci.ipynb
+++ b/baseline-cresci/baseline-cresci.ipynb
@@ -578,6 +578,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "freal = open('./real-pickled', 'wb')\n",
+    "fbot = open('./bot-pickled', 'wb')\n",
+    "pickle.dump(real, freal, protocol=1)\n",
+    "pickle.dump(bot, fbot, protocol=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
