pickled again without protocol

--- a/baseline-cresci/baseline-cresci.ipynb
+++ b/baseline-cresci/baseline-cresci.ipynb
@@ -516,14 +516,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9849222918116446\n"
+      "0.9884017629320343\n"
      ]
     }
    ],
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -547,26 +547,26 @@
      "output_type": "stream",
      "text": [
       "[[0.   1.  ]\n",
-      " [1.   0.  ]\n",
+      " [0.   1.  ]\n",
+      " [0.01 0.99]\n",
+      " [0.   1.  ]\n",
+      " [0.45 0.55]\n",
+      " [0.   1.  ]\n",
+      " [0.   1.  ]\n",
+      " [0.66 0.34]\n",
       " [0.   1.  ]\n",
       " [0.   1.  ]\n",
       " [0.   1.  ]\n",
       " [0.   1.  ]\n",
-      " [0.02 0.98]\n",
-      " [1.   0.  ]\n",
-      " [0.   1.  ]\n",
-      " [1.   0.  ]\n",
       " [0.   1.  ]\n",
       " [0.   1.  ]\n",
       " [0.   1.  ]\n",
+      " [0.93 0.07]\n",
       " [0.   1.  ]\n",
-      " [0.83 0.17]\n",
+      " [0.98 0.02]\n",
       " [0.   1.  ]\n",
-      " [0.06 0.94]\n",
-      " [0.   1.  ]\n",
-      " [0.   1.  ]\n",
-      " [0.   1.  ]]\n",
-      "[1 0 1 1 1 1 1 0 1 0 1 1 1 1 0 1 1 1 1 1]\n"
+      " [1.   0.  ]]\n",
+      "[1 1 1 1 1 1 1 0 1 1 1 1 1 1 1 0 1 0 1 0]\n"
      ]
     }
    ],
@@ -578,15 +578,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "freal = open('./real-pickled', 'wb')\n",
     "fbot = open('./bot-pickled', 'wb')\n",
-    "pickle.dump(real, freal, protocol=1)\n",
-    "pickle.dump(bot, fbot, protocol=1)"
+    "pickle.dump(real, freal)\n",
+    "pickle.dump(bot, fbot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freal = open('./real-pickled', 'rb')\n",
+    "fbot = open('./bot-pickled', 'rb')\n",
+    "new_real = pickle.load(freal)\n",
+    "new_bot = pickle.load(fbot)"
    ]
   },
   {
