added pandas pickle

--- a/baseline-cresci/baseline-cresci.ipynb
+++ b/baseline-cresci/baseline-cresci.ipynb
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,10 @@
     "freal = open('./real-pickled', 'wb')\n",
     "fbot = open('./bot-pickled', 'wb')\n",
     "pickle.dump(real, freal)\n",
-    "pickle.dump(bot, fbot)"
+    "pickle.dump(bot, fbot)\n",
+    "\n",
+    "real.to_pickle('./real-pickled-pandas')\n",
+    "bot.to_pickle('./bot-pickled-pandas')"
    ]
   },
   {
