text analysis, too big to run locally

--- a/Simple Decision Rules Give High Accuracy for Detecting Social Bots on Benchmark Datasets.ipynb
+++ b/Simple Decision Rules Give High Accuracy for Detecting Social Bots on Benchmark Datasets.ipynb
@@ -13,9 +13,7 @@
   {
    "cell_type": "markdown",
    "id": "fb8a5b08",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Setup"
    ]
@@ -26,10 +24,9 @@
    "id": "30d4901e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-29T12:10:54.093700Z",
-     "start_time": "2022-04-29T12:10:53.475371Z"
-    },
-    "hidden": true
+     "end_time": "2022-05-25T13:36:05.255244Z",
+     "start_time": "2022-05-25T13:36:04.244611Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -39,12 +36,16 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.ticker import MaxNLocator\n",
     "import pandas as pd\n",
+    "import pyreadr\n",
+    "from scipy.io import arff\n",
     "from sklearn.decomposition import PCA\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.inspection import permutation_importance\n",
     "from sklearn import tree, ensemble\n",
     "from sklearn.tree import export_text\n",
-    "from sklearn.metrics import f1_score, recall_score, precision_score"
+    "from sklearn.metrics import f1_score, recall_score, precision_score\n",
+    "import xml.etree.ElementTree as ET"
    ]
   },
   {
@@ -53,10 +54,9 @@
    "id": "52ecb529",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-29T12:10:54.106252Z",
-     "start_time": "2022-04-29T12:10:54.094938Z"
-    },
-    "hidden": true
+     "end_time": "2022-05-25T13:36:05.266241Z",
+     "start_time": "2022-05-25T13:36:05.256304Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -181,10 +181,9 @@
    "id": "cd2805a4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-29T12:10:54.693167Z",
-     "start_time": "2022-04-29T12:10:54.687338Z"
-    },
-    "hidden": true
+     "end_time": "2022-05-25T13:36:05.463990Z",
+     "start_time": "2022-05-25T13:36:05.461221Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -220,9 +219,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73df99d5",
+   "id": "bf4a6e78",
    "metadata": {
     "heading_collapsed": true
+   },
+   "source": [
+    "# Network features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73df99d5",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## \"TwiBot-20: A Comprehensive Twitter Bot Detection Benchmark.\"\n",
@@ -452,6 +462,7 @@
    "cell_type": "markdown",
    "id": "a38dd3cb",
    "metadata": {
+    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -494,7 +505,10 @@
   {
    "cell_type": "markdown",
    "id": "73a95833",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "## botometer-feedback-2019: \"Arming the public with artificial intelligence to counter social bots.\"\n",
     "\n",
@@ -520,6 +534,7 @@
      "end_time": "2022-04-29T12:25:30.142770Z",
      "start_time": "2022-04-29T12:25:28.788735Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -635,7 +650,8 @@
    "cell_type": "markdown",
    "id": "167b5510",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## \"Rtbust-2019: Exploiting temporal patterns for botnet detection on twitter.\"\n",
@@ -721,7 +737,8 @@
    "cell_type": "markdown",
    "id": "97fd857b",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## midterm-2018\n",
@@ -735,12 +752,20 @@
    "id": "6d68e9ec",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-04-29T02:12:32.326Z"
+     "start_time": "2022-05-25T01:03:42.481Z"
     },
     "hidden": true,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------- DECISION TREE --------------\n"
+     ]
+    }
+   ],
    "source": [
     "def extract_users(data_path):\n",
     "    with open(data_path) as f:\n",
@@ -786,7 +811,8 @@
    "cell_type": "markdown",
    "id": "828f4d08",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## gilani-2017"
@@ -879,7 +905,8 @@
    "cell_type": "markdown",
    "id": "897192c2",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## cresci-2017: \"The paradigm-shift of social spambots: Evidence, theories, and tools for the arms race.\"\n",
@@ -1105,7 +1132,8 @@
    "cell_type": "markdown",
    "id": "002611e8",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## varol-2017\n",
@@ -1117,7 +1145,8 @@
    "cell_type": "markdown",
    "id": "e0348c55",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## cresci-2015"
@@ -1257,7 +1286,8 @@
    "cell_type": "markdown",
    "id": "a0995263",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## caverlee-2011: \"A Long-Term Study of Content Polluters on Twitter.\"\n",
@@ -1275,12 +1305,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "id": "a44a8b35",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-29T00:48:56.080762Z",
-     "start_time": "2022-04-29T00:48:55.848949Z"
+     "end_time": "2022-05-24T12:33:07.025547Z",
+     "start_time": "2022-05-24T12:33:06.766413Z"
     },
     "hidden": true
    },
@@ -1480,6 +1510,437 @@
     "fig, axes =plt.subplots(1, 2, figsize=(15,7))\n",
     "mdi_feature_importance(rf_clf, list(caverlee2011.columns), axes[0])\n",
     "permutation_feature_importance(axes[1], caverlee2011, caverlee2011_labels, [])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9314f2c",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
+   "source": [
+    "## Kaiser\n",
+    "\n",
+    "Only account ids and labels."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "85c802e4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-25T00:44:12.436346Z",
+     "start_time": "2022-05-25T00:44:12.085174Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "kaiser = pyreadr.read_r('data/kaiser/data_botometer.RData')['data_botometer']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "088b0f5e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-25T00:44:14.210355Z",
+     "start_time": "2022-05-25T00:44:14.197245Z"
+    },
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user.id_str</th>\n",
+       "      <th>date</th>\n",
+       "      <th>type</th>\n",
+       "      <th>cap.universal</th>\n",
+       "      <th>scores.universal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1073515275323097088</td>\n",
+       "      <td>2019-03-03</td>\n",
+       "      <td>bot</td>\n",
+       "      <td>0.325413</td>\n",
+       "      <td>0.724840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>961438005675397120</td>\n",
+       "      <td>2019-03-03</td>\n",
+       "      <td>bot</td>\n",
+       "      <td>0.104603</td>\n",
+       "      <td>0.515643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>941291900862124032</td>\n",
+       "      <td>2019-03-03</td>\n",
+       "      <td>bot</td>\n",
+       "      <td>0.060559</td>\n",
+       "      <td>0.413570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>809439447796355072</td>\n",
+       "      <td>2019-03-03</td>\n",
+       "      <td>bot</td>\n",
+       "      <td>0.060559</td>\n",
+       "      <td>0.413570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>769777732213321729</td>\n",
+       "      <td>2019-03-03</td>\n",
+       "      <td>bot</td>\n",
+       "      <td>0.054305</td>\n",
+       "      <td>0.393746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>374719</th>\n",
+       "      <td>2234767742</td>\n",
+       "      <td>2019-06-02</td>\n",
+       "      <td>ger_bot</td>\n",
+       "      <td>0.104603</td>\n",
+       "      <td>0.515643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>374720</th>\n",
+       "      <td>1092190045</td>\n",
+       "      <td>2019-06-02</td>\n",
+       "      <td>ger_bot</td>\n",
+       "      <td>0.010165</td>\n",
+       "      <td>0.170132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>374721</th>\n",
+       "      <td>57146860</td>\n",
+       "      <td>2019-06-02</td>\n",
+       "      <td>ger_bot</td>\n",
+       "      <td>0.023812</td>\n",
+       "      <td>0.267344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>374722</th>\n",
+       "      <td>56828167</td>\n",
+       "      <td>2019-06-02</td>\n",
+       "      <td>ger_bot</td>\n",
+       "      <td>0.005778</td>\n",
+       "      <td>0.119570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>374723</th>\n",
+       "      <td>14383393</td>\n",
+       "      <td>2019-06-02</td>\n",
+       "      <td>ger_bot</td>\n",
+       "      <td>0.023812</td>\n",
+       "      <td>0.267344</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>374724 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                user.id_str        date     type  cap.universal  \\\n",
+       "0       1073515275323097088  2019-03-03      bot       0.325413   \n",
+       "1        961438005675397120  2019-03-03      bot       0.104603   \n",
+       "2        941291900862124032  2019-03-03      bot       0.060559   \n",
+       "3        809439447796355072  2019-03-03      bot       0.060559   \n",
+       "4        769777732213321729  2019-03-03      bot       0.054305   \n",
+       "...                     ...         ...      ...            ...   \n",
+       "374719           2234767742  2019-06-02  ger_bot       0.104603   \n",
+       "374720           1092190045  2019-06-02  ger_bot       0.010165   \n",
+       "374721             57146860  2019-06-02  ger_bot       0.023812   \n",
+       "374722             56828167  2019-06-02  ger_bot       0.005778   \n",
+       "374723             14383393  2019-06-02  ger_bot       0.023812   \n",
+       "\n",
+       "        scores.universal  \n",
+       "0               0.724840  \n",
+       "1               0.515643  \n",
+       "2               0.413570  \n",
+       "3               0.413570  \n",
+       "4               0.393746  \n",
+       "...                  ...  \n",
+       "374719          0.515643  \n",
+       "374720          0.170132  \n",
+       "374721          0.267344  \n",
+       "374722          0.119570  \n",
+       "374723          0.267344  \n",
+       "\n",
+       "[374724 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kaiser"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aaa4ba3",
+   "metadata": {},
+   "source": [
+    "# Single-class datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35aa204e",
+   "metadata": {},
+   "source": [
+    "## Astroturf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ddef813",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68e21e96",
+   "metadata": {},
+   "source": [
+    "## botwiki-2019"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "032d6401",
+   "metadata": {},
+   "source": [
+    "## celebrity-2019"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9eee596e",
+   "metadata": {},
+   "source": [
+    "## political-bots-2019"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99f5a228",
+   "metadata": {},
+   "source": [
+    "## pronbots-2019"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac35a863",
+   "metadata": {},
+   "source": [
+    "## vendor-purchased-2019"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6c12784",
+   "metadata": {},
+   "source": [
+    "## verified-2019"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecf05bb6",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## EMD-2017: \"Twitter fake account detection\"\n",
+    "\n",
+    "All accounts are fake. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "2bc79677",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-24T12:35:01.322695Z",
+     "start_time": "2022-05-24T12:35:01.307355Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "# Load data\n",
+    "data = arff.loadarff('data/EMD-2017/Twitter_dataset.arff')\n",
+    "emd = pd.DataFrame(data[0])\n",
+    "\n",
+    "for col in emd:\n",
+    "    if (type(emd[col][0]) == type(b'str')):\n",
+    "        emd[col] = emd[col].apply(bool)\n",
+    "\n",
+    "emd.head()\n",
+    "\n",
+    "emd_labels = emd['is_fake'].apply(lambda x: 1 if x else 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "81db4a28",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-24T12:33:54.595843Z",
+     "start_time": "2022-05-24T12:33:54.573813Z"
+    },
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|--- class: 0\n",
+      "\n",
+      "In-sample accuracy: 1.0\n",
+      "In-sample precision score: 1.0\n",
+      "In-sample recall score: 1.0\n",
+      "In-sample F1 score: 1.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(DecisionTreeClassifier(max_depth=1), 1.0, 1.0, 1.0, 1.0)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Preprocess\n",
+    "emd_one_hot = preprocess(emd, ['is_fake'], ['protected', 'profile_use_background_image', 'verified', 'contributors_enabled', 'default_profile', 'default_profile_image', 'is_translator'])\n",
+    "\n",
+    "# Fit and score decision tree\n",
+    "fit_and_score(emd_one_hot, emd_labels, depth=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "799af12e",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Text-based classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80553dc3",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "## PAN19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f83823bd",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-25T13:36:12.824810Z",
+     "start_time": "2022-05-25T13:36:07.295376Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_tweets_xml(path):\n",
+    "    with open(path) as xmlfile:\n",
+    "        tree = ET.parse(xmlfile)\n",
+    "        tweets = (document.text for document in tree.getroot()[0])\n",
+    "        tweets_joined = \" \".join(tweets)\n",
+    "        return tweets_joined\n",
+    "    \n",
+    "def get_labels(path):\n",
+    "    d = dict()\n",
+    "    with open(path) as file:\n",
+    "        for line in file:\n",
+    "            labels = line.split(\":::\")\n",
+    "            d[labels[0]] = 1 if labels[1] == 'bot' else 0\n",
+    "    return pd.DataFrame.from_dict(d, orient='index', columns=['label'])\n",
+    "\n",
+    "def get_tweets_pan19(index):\n",
+    "    d = {ind : get_tweets_xml(f\"data/pan19/pan19-author-profiling-training-2019-02-18/en/{ind}.xml\") for ind in index}\n",
+    "    return pd.DataFrame.from_dict(d, orient='index', columns=['tweets'])\n",
+    "        \n",
+    "# Get dataframe of labels and tweets\n",
+    "pan19_labels = get_labels(\"data/pan19/pan19-author-profiling-training-2019-02-18/en/truth.txt\")\n",
+    "pan19_tweets = get_tweets_pan19(pan19_labels.index)\n",
+    "# Get count vectorizer df\n",
+    "pan19_cv = CountVectorizer(stop_words='english') \n",
+    "pan19_cv_matrix = pan19_cv.fit_transform(pan19_tweets['tweets']) \n",
+    "pan19_cv_df = pd.DataFrame(pan19_cv_matrix.toarray(), index=pan19_tweets.index, columns=pan19_cv.get_feature_names_out())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eeca5559",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2022-05-25T13:36:13.572Z"
+    },
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "fit_and_score(pan19_cv_df.loc[pan19_labels.index].drop(['tweets', 'label'], axis=1), pan19_labels, depth=3)"
    ]
   }
  ],
