fixed botometer-feedback bug

--- a/Simple Decision Rules Give High Accuracy for Detecting Social Bots on Benchmark Datasets.ipynb
+++ b/Simple Decision Rules Give High Accuracy for Detecting Social Bots on Benchmark Datasets.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-25T14:00:16.465779Z",
@@ -182,7 +182,7 @@
     "def train_test_fit_and_score(X, y, method=None, depth=3):\n",
     "    \"\"\" Train test split. \"\"\"\n",
     "    train, test, train_labels, test_labels = train_test_split(X, y, test_size=0.3)\n",
-    "    clf, *_ = fit_and_score(train, train_labels, method=None, depth=depth, silent=True)\n",
+    "    clf, *_ = fit_and_score(train, train_labels, method=method, depth=depth, silent=True)\n",
     "    score(clf, test, test_labels)\n",
     "\n",
     "\n",
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 79,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-05-25T14:00:26.476153Z",
@@ -847,51 +847,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting train_test_fit_and_score at 1654370412.773474\n",
-      "|--- favourites_count <= 25.50\n",
-      "|   |--- followers_count <= 110.50\n",
-      "|   |   |--- friends_count <= 8.50\n",
-      "|   |   |   |--- weights: [0.00, 4.00] class: 1.0\n",
-      "|   |   |--- friends_count >  8.50\n",
-      "|   |   |   |--- weights: [19.00, 5.00] class: 0.0\n",
-      "|   |--- followers_count >  110.50\n",
-      "|   |   |--- followers_count <= 147449.50\n",
-      "|   |   |   |--- weights: [3.00, 29.00] class: 1.0\n",
-      "|   |   |--- followers_count >  147449.50\n",
-      "|   |   |   |--- weights: [3.00, 1.00] class: 0.0\n",
-      "|--- favourites_count >  25.50\n",
-      "|   |--- statuses_count <= 25228.50\n",
-      "|   |   |--- statuses_count <= 67.50\n",
-      "|   |   |   |--- weights: [13.00, 9.00] class: 0.0\n",
-      "|   |   |--- statuses_count >  67.50\n",
-      "|   |   |   |--- weights: [180.00, 12.00] class: 0.0\n",
-      "|   |--- statuses_count >  25228.50\n",
-      "|   |   |--- created_at <= 1343924288.00\n",
-      "|   |   |   |--- weights: [32.00, 7.00] class: 0.0\n",
-      "|   |   |--- created_at >  1343924288.00\n",
-      "|   |   |   |--- weights: [17.00, 29.00] class: 1.0\n",
-      "\n",
-      "Accuracy: 0.7243589743589743\n",
-      "Precision 0.5\n",
-      "Recall: 0.3488372093023256\n",
-      "F1: 0.4109589041095891\n",
-      "Finished train_test_fit_and_score at 1654370412.8214216. Execution time: 0.04794764518737793 s\n",
       "-------------- RANDOM FOREST --------------\n",
-      "Accuracy score: 0.7692307692307693\n",
-      "Precision score: 0.3125\n",
-      "Recall score: 0.8333333333333334\n",
-      "F1 score: 0.45454545454545453\n",
-      "Starting kfold_cv at 1654370413.8983042\n",
+      "Accuracy score: 0.8397435897435898\n",
+      "Precision score: 0.8823529411764706\n",
+      "Recall score: 0.39473684210526316\n",
+      "F1 score: 0.5454545454545454\n",
+      "Starting kfold_cv at 1654371624.5145698\n",
       "Fold 0 in progress\n",
       "Fold 1 in progress\n",
       "Fold 2 in progress\n",
       "Fold 3 in progress\n",
       "Fold 4 in progress\n",
-      "Finished kfold_cv at 1654370414.0358572. Execution time: 0.13755297660827637 s\n",
-      "Starting kfold_cv at 1654370414.0360606\n",
+      "Finished kfold_cv at 1654371624.6266186. Execution time: 0.11204886436462402 s\n",
+      "Starting kfold_cv at 1654371624.6268198\n",
       "Fold 0 in progress\n",
       "Fold 1 in progress\n",
-      "Fold 2 in progress\n"
+      "Fold 2 in progress\n",
+      "Fold 3 in progress\n"
      ]
     },
     {
@@ -906,30 +878,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold 3 in progress\n",
       "Fold 4 in progress\n",
-      "Finished kfold_cv at 1654370414.1529791. Execution time: 0.11691856384277344 s\n",
-      "Starting kfold_cv at 1654370414.1532037\n",
+      "Finished kfold_cv at 1654371624.7434242. Execution time: 0.11660432815551758 s\n",
+      "Starting kfold_cv at 1654371624.7436247\n",
       "Fold 0 in progress\n",
       "Fold 1 in progress\n",
       "Fold 2 in progress\n",
       "Fold 3 in progress\n",
       "Fold 4 in progress\n",
-      "Finished kfold_cv at 1654370414.2737808. Execution time: 0.12057709693908691 s\n",
-      "Starting kfold_cv at 1654370414.2739818\n",
+      "Finished kfold_cv at 1654371624.8634555. Execution time: 0.11983084678649902 s\n",
+      "Starting kfold_cv at 1654371624.8636575\n",
       "Fold 0 in progress\n",
       "Fold 1 in progress\n",
       "Fold 2 in progress\n",
       "Fold 3 in progress\n",
       "Fold 4 in progress\n",
-      "Finished kfold_cv at 1654370414.397798. Execution time: 0.12381625175476074 s\n",
-      "Starting kfold_cv at 1654370414.3980093\n",
+      "Finished kfold_cv at 1654371624.9869518. Execution time: 0.12329435348510742 s\n",
+      "Starting kfold_cv at 1654371624.98716\n",
       "Fold 0 in progress\n",
       "Fold 1 in progress\n",
       "Fold 2 in progress\n",
       "Fold 3 in progress\n",
       "Fold 4 in progress\n",
-      "Finished kfold_cv at 1654370414.5245266. Execution time: 0.12651729583740234 s\n"
+      "Finished kfold_cv at 1654371625.1150517. Execution time: 0.12789177894592285 s\n"
      ]
     }
    ],
@@ -947,19 +918,19 @@
     "#     print(humans, bots)\n",
     "#     # Fit and score on decision tree\n",
     "#     print(\"-------------- DECISION TREE TRAIN/TEST SPLIT --------------\")\n",
-    "    train_test_fit_and_score(one_hot, labels, depth=depth)\n",
+    "    #train_test_fit_and_score(one_hot, labels, depth=depth)\n",
     "#     # Fit and score on random forest\n",
     "    print(\"-------------- RANDOM FOREST --------------\")\n",
     "    train, test, train_labels, test_labels = train_test_split(one_hot, labels, test_size=0.3)\n",
-    "    rf = ensemble.RandomForestClassifier(n_estimators=100, max_depth=2)\n",
+    "    rf = ensemble.RandomForestClassifier(n_estimators=100)\n",
     "    clf_sig = CalibratedClassifierCV(rf, method='sigmoid')\n",
-    "    clf = fit(train, train_labels, clf_sig, depth)\n",
+    "    clf = fit(train, train_labels, rf)\n",
     "    probs = clf.predict_proba(test)\n",
     "    preds = [0 if p[0] >= 0.5 else 1 for p in probs]\n",
-    "    print(\"Accuracy score:\", accuracy_score(preds, test_labels))\n",
-    "    print(\"Precision score:\", precision_score(preds, test_labels))\n",
-    "    print(\"Recall score:\", recall_score(preds, test_labels))\n",
-    "    print(\"F1 score:\", f1_score(preds, test_labels))\n",
+    "    print(\"Accuracy score:\", accuracy_score(test_labels, preds))\n",
+    "    print(\"Precision score:\", precision_score(test_labels, preds))\n",
+    "    print(\"Recall score:\", recall_score(test_labels, preds))\n",
+    "    print(\"F1 score:\", f1_score(test_labels, preds))\n",
     "    #train_test_fit_and_score(one_hot, labels, method=clf_sig)\n",
     "    #fig, axes = plt.subplots(1,2, figsize=(15,7))\n",
     "    #mdi_feature_importance(rf_clf, list(one_hot.columns), axes[0])\n",
@@ -2955,7 +2926,7 @@
     "gilani_processed.drop(['screen_name', 'source_identity', 'source_identity_list'], axis=1, inplace=True)\n",
     "# Fit and score on decision tree\n",
     "# print(\"-------------- DECISION TREE TRAIN/TEST SPLIT --------------\")\n",
-    "# train_test_fit_and_score(gilani_processed, labels, depth=5)\n",
+    "train_test_fit_and_score(gilani_processed, labels, depth=5)\n",
     "# # Fit and score on random forest\n",
     "# print(\"-------------- RANDOM FOREST --------------\")\n",
     "rf = ensemble.RandomForestClassifier(n_estimators=100)\n",
